<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default_value"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:defaultValue="@string/pref_units_default_value"
        android:dialogTitle="Units"
        android:entries="@array/entry_values_units"
        android:entryValues="@array/entry_values_units"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_default_value"
        android:title="Select your units" />

</PreferenceScreen>

